# credit-card-fraud

./: .gitignore  LICENSE  README.md  coverage.json  pyproject.toml
commands/: get_project_file_tree.ps1
credit_card_fraud/: constants.py  schemas.py  types.py
credit_card_fraud/config/: constants.py  settings.py
credit_card_fraud/data/: loaders.py  preprocessor.py
credit_card_fraud/domain/: base.py  configs.py  constants.py  features.py  types.py
credit_card_fraud/evaluation/: metrics.py  reporting.py  validation.py
credit_card_fraud/features/: engineering.py  selection.py
credit_card_fraud/models/: base.py  lightgbm.py  sklearn.py  xgboost.py
credit_card_fraud/training/: callbacks.py  cost_sensitive.py  pipeline.py
credit_card_fraud/utils/: logging.py  mlflow.py
tests/: conftest.py  strategies.py  test_schemas.py
