[tool.poetry]
name = "credit-card-fraud"
version = "0.1.0"
description = "Case study on cost-sensitive learning on the credit card fraud dataset (Open ML ID 1597)"
authors = [
    "Fabio Baccarin"
]
readme = "README.md"
packages = [{include = "credit_card_fraud"}]

[tool.poetry.dependencies]
python = "^3.13"

# Core data science stack
polars = "^1.35"
scikit-learn = "^1.7"
xgboost = "^3.1"
lightgbm = "^4.6"

# Data integration and validation
openml = "^0.15"
pydantic = "^2.0"

# Experiment tracking and configuration
mlflow = "^3.0"
ruamel-yaml = "^0.18"

# Visualization
matplotlib = "^3.0"
rich = "^14.0"

# Utilities
joblib = "^1.5"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0"
pytest-mock = "^3.0"
pytest-xdist = "^3.0"
pytest-cov = "^7.0"
pytest-randomly = "^4.0"
hypothesis = "^6.0"

# Development utilities
ipykernel = "^7.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ==================================================================================================
# PYTEST
# ==================================================================================================
[tool.pytest.ini_options]
# Test discovery and execution
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output and reporting
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=credit_card_fraud",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=json",
    "--cov-fail-under=80",
    "-n",
    "auto",
]

markers = [
    "integration: integration tests that require external services",
    "slow: slow running tests",
    "unit: unit tests",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"

# ==================================================================================================
# COVERAGE
# ==================================================================================================
[tool.coverage.run]
source = ["credit_card_fraud"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/.venv/*",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",
]
precision = 2
show_missing = true
skip_covered = true